Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.12 - unreleased

5.4.11 - released 20-Mar-05

	Tom Collins
	- vdelivermail: code cleanup (fix exit codes, improve reliability,
	  fix problems with quotas). [837146, 840749, 904155, 1111291,
	  1119741, 1145618]

5.4.10 - released 20-Mar-05

	Stephan Tesch
	- md5.h: fix related to segfaults in vchkpw on Sparc64. [1144851]

	Peter Seiderer
	- vcdb.c: vauth_getpw() didn't check for invalid domain.

	Bill Shupp
	- vuserinfo: display spamassassin info.

	Anonymous
	- vpopmail.c: Add missing ifdef that preventing modification of
	  one-character username accounts.

	Niki Denev
	- maildirquota.c: Remove double free() and fix use of free'd
	  memory in docheckquota(). [1101316]
	- contrib/qmail-maildir++.patch: same fix as for maildirquota.c.

	Tom Collins
	- vlimits.c: print errors to stderr.
	- vmoduser.c: add clarity to usage/help for bit flags.
	- vcdb.c: be sure to close password file in vauth_getpw().
	- md5.h: use cdb/uint32.h (built by configure)  for defining 
	  uint32. [1144851]
	- vpopmail.c: fix vauth_user() to not clobber pw_uid and pw_gid.
	- vpopmail.c: If setting user quota for new user fails because newly
	  created user does not exist, sleep 5 seconds and try again.  
	  (This can happen on servers using MySQL replication.)
	- Remove convert/vcalias.c and related files; vcalias was replaced
	  by dotqmail2valias.

	Michael Bowe
	- configure.in: fix typo of where the configure script says it
	  is checking for qmail-inject when in fact it was checking for
	  qmail-newmrh 
	- Documentation updates to README.roamingusers. Mention the 
	  requirement of tcpserver for POP-before-SMTP. Also include
	  some documentation on IMAP-before-SMTP. [1110269]

5.4.9 - released 26-Dec-04

	Jeremy Kister
	- Makefile.am: fix install problem on Solaris.  Some .h files
	  weren't being installed correctly.
